--- a/index.html
+++ b/index.html
@@ -9,46 +9,47 @@
   </head>
   <body>
 
-    <header class="header">
-    <div class="header__icons">
-        <a href="https://github.com/khorakova?tab=repositories"><img class="header__icons-link" src="icons/icons8-github.svg"></a>
-        <a href="https://cz.linkedin.com/in/kate%C5%99ina-hor%C3%A1kov%C3%A1-7397671b0"><img class="header__icons-link" src="icons/icons8-linkedin-circled.svg"></a>
+  <header class="header">
+    <div class="hero">
+      <div class="hero__icons">
+        <a class="hero__icons-link" href="https://github.com/khorakova?tab=repositories"><img class="hero__icons-image" src="icons/icons8-github.svg"></a>
+        <a class="hero__icons-link" href="https://cz.linkedin.com/in/kate%C5%99ina-hor%C3%A1kov%C3%A1-7397671b0"><img class="hero__icons-image" src="icons/icons8-linkedin-circled.svg"></a>
       </div>
-    <div class="about-me">
-      <div class="about-me__hero">
-        <div class="about-me__hero-content">
-          <h1 class="about-me__name">Kateřina Horáková</h1>
-          <img
-            class="about-me__image"
+      <div class="hero__content">
+        <h1 class="hero__name">Kateřina Horáková</h1>
+        <img
+            class="hero__image"
             src="images/portret.jpeg"
             alt="fotografie"
-          />
-        </div>
+            />
       </div>
+    </div>
+  </header>
+
       <div class="about-me__info">
         <h3 class="about-me__title">O mně</h3>
         <p class="about-me__content">
           Vystudovala jsem obor Technologie potravin, v tomto oboru i poslední
           dva roky pracuji. Při hledání změny v mé kariéře, jsem se nadchla pro
           tvorbu webu. Ve tvorbě webu jsem se následně začala vzdělávat.
-          Absolvovala jsem kurzy na, kterých jsem se naučila HTML, CSS, základy
-          Javascriptu a Reactu.
+          Absolvovala jsem kurzy, na kterých jsem se naučila HTML, CSS, základy
+          Javascriptu. Pracovat s Bootstrapem, Gitem a GitHubem.
         </p>
         <p class="about-me__content">
           Na tvorbě webu se mi líbí, že mohu uplatnit svojí pečlivot, kreativitu
-          a orientaci na výsledek, aby vypadal podle mých představ, případně
+          a orientaci na výsledek, tak aby vypadal podle mých představ, případně
           podle návrhu. Velmi mě motivuje, když vidím svoje úspěšné výsledky.
           Dále bych se chtěla v tomto směru vzdělávat ať už ve své práci nebo ve
           svém volném čase.
         </p>
         <p class="abut-me__content">
-          Pokud se ve volném čase zrovna nevzdělávám ráda cestuji, jak do ciziny
-          tak po České republice. Trávím čas s rodinou a přáteli a dost často mě
+          Pokud se ve volném čase zrovna nevzdělávám ráda cestuji jak do ciziny,
+          tak po České republice. Trávím čas s rodinou a přáteli a často mě
           také můžete najít ponořenou do nějaké knihy.
         </p>
-      </div>
-    </div> 
-  </header>
+      </div> 
+  
+  
     <div class="skills">
       <h3 class="skills__title">Dovednosti</h3>
       <div class="skills__item">
@@ -101,6 +102,8 @@
         <p class="skills__level">Základy</p>
       </div>
     </div>
+
+
     <h3 class="course__title">Kurzy</h3>
     <div class="course">
       <div class="course__item">
@@ -183,8 +186,8 @@
     </ul>
  
   </div>
-  <footer>
-    icons from <a href="https://icons8.com/">www.icons8.com</a>
+  <footer class="footer">
+    Icons from <a class="footer__link" href="https://icons8.com/">www.icons8.com</a>
   </footer> 
 </body>
 </html>
