--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header class="header">
     <div class="hero">
       <div class="hero__icons">
-        <a class="hero__icons-link" href="https://github.com/khorakova?tab=repositories"><img class="hero__icons-image" src="icons/icons8-github.svg"></a>
-        <a class="hero__icons-link" href="https://cz.linkedin.com/in/kate%C5%99ina-hor%C3%A1kov%C3%A1-7397671b0"><img class="hero__icons-image" src="icons/icons8-linkedin-circled.svg"></a>
+        <a class="hero__icons-link" href="https://github.com/khorakova?tab=repositories" target="_blank"><img class="hero__icons-image" src="icons/icons8-github.svg"></a>
+        <a class="hero__icons-link" href="https://cz.linkedin.com/in/kate%C5%99ina-hor%C3%A1kov%C3%A1-7397671b0" target="_blank"><img class="hero__icons-image" src="icons/icons8-linkedin-circled.svg"></a>
       </div>
       <div class="hero__content">
         <h1 class="hero__name">Kateřina Horáková</h1>
@@ -31,7 +31,7 @@
         <p class="about-me__content">
           Vystudovala jsem obor Technologie potravin, v tomto oboru i poslední
           dva roky pracuji. Při hledání změny v mé kariéře, jsem se nadchla pro
-          tvorbu webu. Ve tvorbě webu jsem se následně začala vzdělávat.
+          tvorbu webu a následně se v tomto oboru začala vzdělávat.
           Absolvovala jsem kurzy, na kterých jsem se naučila HTML, CSS, základy
           Javascriptu. Pracovat s Bootstrapem, Gitem a GitHubem.
         </p>
@@ -69,7 +69,7 @@
       <div class="skills__item">
         <div class="skills__left">
           <img class="skills__icon" src="icons/icons8-sass (1).svg" />
-          <p class="skills__name">SaaS</p>
+          <p class="skills__name">Sass</p>
         </div>
         <p class="skills__level">Pokročilý</p>
       </div>
@@ -111,17 +111,16 @@
         <p class="course__item-subtitle">semestrální kurz</p>
         <p class="course__item-content">
           V rámci kurzu jsem se naučila HTML, CSS na pokročilé úrovni. Používání
-          skriptovacího jazyka Saas při tvorbě CSS. Použití generátoru
-          statických stránek Eleventy. Na závět kurzu jsem s využitím nabitých
-          znalostí vztvořila závěrečná projekt, na který se můžete podívat
-          <a href="#">zde</a>.
+          skriptovacího jazyka Sass při tvorbě CSS. Použití generátoru
+          statických stránek Eleventy. V závěru kurzu nyní pracuji na projektu, 
+          který si v rozpracované fázi můžete prohlédnout <a href="https://book-world-khorakova.netlify.app/" target="_blank">zde</a> a v repozitáři na <a href="https://github.com/khorakova/BookWorld" target="_blank">GitHubu</a>.
         </p>
       </div>
       <div class="course__item">
         <h4 class="course__item-title">ReactGirls: Akademie, začátečníci</h4>
         <p class="course__item-subtitle">3 týdenní kurz</p>
         <p class="course__item-content">
-          V rámci kurzu jsem si zopakovala základy HTML a CSS a naučila základy Javasriptu.  
+          V rámci kurzu jsem si zopakovala základy HTML a CSS a naučila se základy Javasriptu.  
         </p>
       </div>
       <div class="course__item">
@@ -145,32 +144,31 @@
     <p class="my-work__info">
       V rámci kurzů a ve volném čase, jsem se zabívala řadou malých projektů,
       kde jsem zkoušela využít všechny získané znalosti. Ty nejpovedenější
-      můžete najít v následujícím přehledu, více pak na mém GitHubu.
+      můžete najít v následujícím přehledu, více pak na mém <a href="https://github.com/khorakova?tab=repositories " target="_blank">GitHubu</a>.
     </p>
-    <a class="link" href="https://github.com/khorakova?tab=repositories"><img class="link__image" src="icons/icons8-github.svg">GitHub</a>
     </div>
 
     <div class="portfolio">
       <div class="portfolio__item">
-        <a class="portfolio__link" href="https://github.com/khorakova/PROJEKT-Cestovka">
-        <img class="portfolio__image" src="images/portfolio-01.PNG">
+        <a class="portfolio__link" href="https://khorakova.github.io/PROJEKT-Cestovka/" target="_blank">
+        <img class="portfolio__image" src="images/portfolio-01.PNG"></a>
         <p class="portfolio__title">Webová stránka cestovky</p>
         <p class="portfolio__description">domácí úkol kurz: Staň se kodérkou</p>
-        </a>
+        <a href="https://github.com/khorakova/PROJEKT-Cestovka" target="_blank">Repozitář GitHub</a>
       </div>
       <div class="portfolio__item">
-        <a class="portfolio__link" href="https://github.com/khorakova/PROJEKT-Sluzby">
-        <img class="portfolio__image" src="images/portfolio-02.PNG">
+        <a class="portfolio__link" href="https://khorakova.github.io/PROJEKT-Sluzby/" target="_blank">
+        <img class="portfolio__image" src="images/portfolio-02.PNG"></a>
         <p class="portfolio__title">Nabídka služeb cestovky</p>
         <p class="portfolio__description">domácí úkol kurz: Staň se kodérkou</p>
-        </a>
+        <a href="https://github.com/khorakova/PROJEKT-Sluzby" target="_blank">Repozitář GitHub</a>
       </div>
       <div class="portfolio__item">
-        <a class="portfolio__link" href="https://github.com/khorakova/PROJEKT-Cukrarna">
-        <img class="portfolio__image" src="images/portfolio-03.PNG">
+        <a class="portfolio__link" href="https://khorakova.github.io/PROJEKT-Cukrarna/" target="_blank">
+        <img class="portfolio__image" src="images/portfolio-03.PNG"></a>
         <p class="portfolio__title">Webové stránky cukrárny</p>
         <p class="portfolio__description">domácí úkol kurz: Staň se kodérkou</p>
-        </a>
+        <a href="https://github.com/khorakova/PROJEKT-Cukrarna" target="_blank">Repozitář GitHub</a>
       </div>
     </div>
   
