--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 class="hero__name">Kateřina Horáková</h1>
         <img
             class="hero__image"
-            src="images/portret.jpeg"
+            src="images/portret.png"
             alt="fotografie"
             />
       </div>
@@ -29,22 +29,22 @@
       <div class="about-me__info">
         <h3 class="about-me__title">O mně</h3>
         <p class="about-me__content">
-          Vystudovala jsem obor Technologie potravin, v tomto oboru i poslední
+          Vystudovala jsem obor technologie potravin na VŠCHT v Praze, v tomto oboru i poslední
           dva roky pracuji. Při hledání změny v mé kariéře, jsem se nadchla pro
           tvorbu webu a následně se v tomto oboru začala vzdělávat.
           Absolvovala jsem kurzy, na kterých jsem se naučila HTML, CSS, základy
-          Javascriptu. Pracovat s Bootstrapem, Gitem a GitHubem.
+          JavaScriptu, Bootstrap a Git.
         </p>
         <p class="about-me__content">
           Na tvorbě webu se mi líbí, že mohu uplatnit svojí pečlivot, kreativitu
           a orientaci na výsledek, tak aby vypadal podle mých představ, případně
           podle návrhu. Velmi mě motivuje, když vidím svoje úspěšné výsledky.
-          Dále bych se chtěla v tomto směru vzdělávat ať už ve své práci nebo ve
+          Dále bych se chtěla v tomto směru vzdělávat, ať už ve své práci nebo ve
           svém volném čase.
         </p>
         <p class="abut-me__content">
-          Pokud se ve volném čase zrovna nevzdělávám ráda cestuji jak do ciziny,
-          tak po České republice. Trávím čas s rodinou a přáteli a často mě
+          Pokud se ve volném čase zrovna nevzdělávám, ráda cestuji jak do ciziny,
+          tak po České republice, trávím čas s rodinou a přáteli a často mě
           také můžete najít ponořenou do nějaké knihy.
         </p>
       </div> 
@@ -83,7 +83,7 @@
       <div class="skills__item">
         <div class="skills__left">
           <img class="skills__icon" src="icons/icons8-javascript.svg" />
-          <p class="skills__name">Javascript</p>
+          <p class="skills__name">JavaScript</p>
         </div>
         <p class="skills__level">Základy</p>
       </div>
@@ -110,9 +110,9 @@
         <h4 class="course__item-title">Czechitas: Staň se kodérkou</h4>
         <p class="course__item-subtitle">semestrální kurz</p>
         <p class="course__item-content">
-          V rámci kurzu jsem se naučila HTML, CSS na pokročilé úrovni. Používání
+          V rámci kurzu jsem se naučila HTML a CSS na pokročilé úrovni. Používání
           skriptovacího jazyka Sass při tvorbě CSS. Použití generátoru
-          statických stránek Eleventy. V závěru kurzu nyní pracuji na projektu, 
+          statických stránek <a href="https://www.11ty.dev/" target="_blank">Eleventy</a>. V závěru kurzu nyní pracuji na projektu, 
           který si v rozpracované fázi můžete prohlédnout <a href="https://book-world-khorakova.netlify.app/" target="_blank">zde</a> a v repozitáři na <a href="https://github.com/khorakova/BookWorld" target="_blank">GitHubu</a>.
         </p>
       </div>
@@ -142,7 +142,7 @@
     <div class="my-work">
     <h3 class="my-work__title">Moje práce</h3>
     <p class="my-work__info">
-      V rámci kurzů a ve volném čase, jsem se zabívala řadou malých projektů,
+      V rámci kurzů a ve volném čase, jsem se zabývala řadou malých projektů,
       kde jsem zkoušela využít všechny získané znalosti. Ty nejpovedenější
       můžete najít v následujícím přehledu, více pak na mém <a href="https://github.com/khorakova?tab=repositories " target="_blank">GitHubu</a>.
     </p>
@@ -150,24 +150,32 @@
 
     <div class="portfolio">
       <div class="portfolio__item">
+        <a class="portfolio__link" href="https://book-world-khorakova.netlify.app/" target="_blank">
+        <img class="portfolio__image" src="images/portfolio.04.png"></a>
+        <p class="portfolio__title">Knižní blog</p>
+        <p class="portfolio__description">Závěrečný projekt kurz: Staň se kodérkou</p>
+        <p class="info">Webová stránka v procesu tvorby.</p>
+        <a href="https://github.com/khorakova/PROJEKT-Cukrarna" target="_blank">Repozitář GitHub</a>
+      </div>
+      <div class="portfolio__item">
         <a class="portfolio__link" href="https://khorakova.github.io/PROJEKT-Cestovka/" target="_blank">
-        <img class="portfolio__image" src="images/portfolio-01.PNG"></a>
+        <img class="portfolio__image" src="images/portfolio.01.png"></a>
         <p class="portfolio__title">Webová stránka cestovky</p>
-        <p class="portfolio__description">domácí úkol kurz: Staň se kodérkou</p>
+        <p class="portfolio__description">Domácí úkol kurz: Staň se kodérkou</p>
         <a href="https://github.com/khorakova/PROJEKT-Cestovka" target="_blank">Repozitář GitHub</a>
       </div>
       <div class="portfolio__item">
         <a class="portfolio__link" href="https://khorakova.github.io/PROJEKT-Sluzby/" target="_blank">
-        <img class="portfolio__image" src="images/portfolio-02.PNG"></a>
+        <img class="portfolio__image" src="images/portfolio.02.png"></a>
         <p class="portfolio__title">Nabídka služeb cestovky</p>
-        <p class="portfolio__description">domácí úkol kurz: Staň se kodérkou</p>
+        <p class="portfolio__description">Domácí úkol kurz: Staň se kodérkou</p>
         <a href="https://github.com/khorakova/PROJEKT-Sluzby" target="_blank">Repozitář GitHub</a>
       </div>
       <div class="portfolio__item">
         <a class="portfolio__link" href="https://khorakova.github.io/PROJEKT-Cukrarna/" target="_blank">
-        <img class="portfolio__image" src="images/portfolio-03.PNG"></a>
+        <img class="portfolio__image" src="images/portfolio.03.png"></a>
         <p class="portfolio__title">Webové stránky cukrárny</p>
-        <p class="portfolio__description">domácí úkol kurz: Staň se kodérkou</p>
+        <p class="portfolio__description">Domácí úkol kurz: Staň se kodérkou</p>
         <a href="https://github.com/khorakova/PROJEKT-Cukrarna" target="_blank">Repozitář GitHub</a>
       </div>
     </div>
