--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
       <div class="about-me__info">
         <h3 class="about-me__title">O mně</h3>
         <p class="about-me__content">
-          Vystudovala jsem obor technologie potravin na VŠCHT v Praze, v tomto oboru i poslední
-          dva roky pracuji. Při hledání změny v mé kariéře, jsem se nadchla pro
-          tvorbu webu a následně se v tomto oboru začala vzdělávat.
+          Vystudovala jsem obor technologie potravin na VŠCHT v Praze, v tomto oboru jsem i
+          dva roky pracovala. Při hledání změny v mé kariéře, jsem se nadchla pro
+          tvorbu front-endu a následně se v tomto oboru začala vzdělávat.
           Absolvovala jsem kurzy, na kterých jsem se naučila HTML, CSS, základy
-          JavaScriptu, Bootstrap a Git.
+          JavaScriptu, Bootstrap a Git. Nyní pracuji ve společnosti Unicorn jako Jira administrátor 
+          a konzultant na projektu tvorby digitální banky. Ve volném čase jsem se letos nadchla pro rozšíření 
+          svých znalostí do oblasti UX. 
         </p>
         <p class="about-me__content">
           Na tvorbě webu se mi líbí, že mohu uplatnit svojí pečlivot, kreativitu
           a orientaci na výsledek, tak aby vypadal podle mých představ, případně
-          podle návrhu. Velmi mě motivuje, když vidím svoje úspěšné výsledky.
-          Dále bych se chtěla v tomto směru vzdělávat, ať už ve své práci nebo ve
-          svém volném čase.
+          podle návrhu. To stejné platí o oblasti UX, kde mohu být u zrodu celého projektu od začátku.
+          Velmi mě motivuje, když vidím svoje úspěšné výsledky.
+           
         </p>
         <p class="abut-me__content">
           Pokud se ve volném čase zrovna nevzdělávám, ráda cestuji jak do ciziny,
@@ -75,18 +77,26 @@
       </div>
       <div class="skills__item">
         <div class="skills__left">
+          <img class="skills__icon" src="icons/icons8-javascript.svg" />
+          <p class="skills__name">JavaScript</p>
+        </div>
+        <p class="skills__level">Mírně Pokročilý</p>
+      </div>
+      <div class="skills__item">
+        <div class="skills__left">
+          <img  class="skills__icon" src="https://img.icons8.com/fluency/48/null/figma.png"/>
+          <p class="skills__name">Figma</p>
+        </div>
+        <p class="skills__level">Mírně Pokročilý</p>
+      </div>
+      <div class="skills__item">
+        <div class="skills__left">
           <img class="skills__icon" src="icons/icons8-bootstrap.svg" />
           <p class="skills__name">Bootstrap</p>
         </div>
         <p class="skills__level">Základy</p>
       </div>
-      <div class="skills__item">
-        <div class="skills__left">
-          <img class="skills__icon" src="icons/icons8-javascript.svg" />
-          <p class="skills__name">JavaScript</p>
-        </div>
-        <p class="skills__level">Základy</p>
-      </div>
+      
       <div class="skills__item">
         <div class="skills__left">
           <img class="skills__icon" src="icons/icons8-git (1).svg" />
@@ -106,6 +116,25 @@
 
     <h3 class="course__title">Kurzy</h3>
     <div class="course">
+      <div class="course__item">
+        <h4 class="course__item-title">Czechitas: UX</h4>
+        <p class="course__item-subtitle">semestrální kurz</p>
+        <p class="course__item-content">
+          V rámci kurzu jsem se seznámila s designovými principy, psychologií designu. Naučila jsem se provádět UX research, 
+          rozpoznávat potřeby zákazníka a analyzovat problém. Dále se kurz zaměřoval na vytváření Person, Empythy a Customer Journey Maps.
+          Další část kurzu byla věnována skicování, wireframování a prototypování ve Figmě. Poslední část kurzu se věnovala
+          uživatelskému testování.
+          </p>
+      </div>
+      <div class="course__item">
+        <h4 class="course__item-title">Czechitas: JavaScript 1.</h4>
+        <p class="course__item-subtitle">semestrální kurz</p>
+        <p class="course__item-content">
+        V rámci kurzu jsem se naučila základy programování (datové typy, podmínky, cykly), 
+        manipulovat s objekty na stránce: dynamická změna obsahu, změna vzhledu, zobrazování a skrývání prvků na stránce.
+        Principy událostí a reakce na vstup uživatele, formuláře. Práce s médii na stránce (video, zvuk).
+          </p>
+      </div>
       <div class="course__item">
         <h4 class="course__item-title">Czechitas: Staň se kodérkou</h4>
         <p class="course__item-subtitle">semestrální kurz</p>
